# SafeCodeAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  SAC.md  pyproject.toml  safe_code_agent_software_design_doc.md
.claude/: CLAUDE.md  versions.json
docs/: agent_runtime_target_roadmap.md  install-update.md  mvp-user-guide.md  product-review-v2.3.4-followup.md  productization-roadmap-to-claude-code.md  release_roadmap_v0_1_to_v1_0.md  v0_1_implementation_plan.md  version_implementation_matrix.md  version_skill_workflow.md
examples/: README.md
scripts/: new-version-plan.sh  new-version-skill.sh
tests/: test_agent_contract.py  test_agent_edit.py  test_agent_human_checkpoints.py  test_agent_journal.py  test_agent_loop_patch.py  test_agent_session.py  test_agent_tool_intents.py  test_audit_log.py  test_bubblewrap_args_plan.py  test_checkpoint.py  test_cli_output_honesty.py  test_context_budget.py  test_context_explain.py  test_demo_workflows.py  test_diff_planner.py  test_docker_container_plan.py  test_ide_bridge.py  test_install_update_polish.py  test_mcp_approved_write.py  test_mcp_read_tool_loop.py  test_mvp_docs.py  test_onboarding_examples.py  test_patch_apply.py  test_patch_parser.py  test_patch_validator.py  test_project_test_detector.py  test_repo_map.py  test_runtime_extensions.py  test_sandbox_adapter_contract.py  test_sandbox_approval_security_evals.py  test_sandbox_approval_state.py  test_sandbox_execution_gate.py  test_sandbox_execution_preflight.py  test_sandbox_execution_security_evals.py  test_sandbox_plan_security_evals.py  test_setup_wizard.py  (+8 more)
(+275 files in other folders)
