[project]
name = "safecode-agent"
version = "2.1.3"
description = "A safety-first terminal coding agent with diff review, checkpoints, rollback, and audit logs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
sac = "safecode.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safecode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
